--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,1 +1,7 @@
+@import './abstracts/mixins';
+@import './abstracts/variables';
+
+@import './base/base';
+@import './base/reset';
+
 @import './pages/index';
