--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,78 +1,3 @@
-/*
-      MEDIA QUERY MANAGER
-
-Breakpoint       Device ($breakpoint)
--------------  | -------------- 
-0 - 600px      | Phone (phone)
-600px - 900px  | Tablet portrait (tab-port)
-900px - 1200px | Tablet landscape (tab-land)
-[1200 - 1800]: | Normal styles 
-1800px - ∞:    | Big desktop (big-desktop)
-
-1em = 16px
-*/
-@mixin respond($breakpoint){
-  @if $breakpoint == phone {
-    @media (max-width: 37.5em) { @content };  // 600px
-  }
-  @if $breakpoint == tab-port {
-    @media (max-width: 56.25em) { @content }; // 900px
-  }
-  @if $breakpoint == tab-land {
-    @media (max-width: 75em) { @content };    // 1200px
-  }
-  @if $breakpoint == big-desktop {
-    @media (min-width: 112.5em) { @content }; // 1800px
-  }
-}
-
-/*
-  Hiding scrollbars mixins:
-  - scroll-x-container: parent element
-  - scroll-x-contained: Child element
-*/
-@mixin scroll-x-container($width: 100%, $padding: 0){
-  width: $width;
-  padding: $padding;
-  overflow: hidden;
-  overflow: -moz-scrollbars-none;
-}
-
-@mixin scroll-x-contained(){
-  overflow-x: scroll;
-  width: 100%;
-  height: 100%;
-  padding-bottom: 5rem;
-  box-sizing: content-box;
-}
-/* Hiding scrollbars mixins */
-
-@mixin clearfix{
-  &::after{
-    content: "";
-    display: table;
-    clear: both;
-  }
-}
-
-@mixin background-img{
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-
-@mixin absCenter {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
 @mixin box-shadow ($shadow...) {
   -webkit-box-shadow: $shadow;
   -moz-box-shadow   : $shadow;
@@ -194,11 +119,9 @@ Breakpoint       Device ($breakpoint)
 }
 
 @mixin display-flex () {
-  display: -webkit-flex;
-  display: -webkit-flexbox;
-  display: -moz-flex;
   display: -moz-box;
   display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
 }
 
@@ -296,7 +219,7 @@ Breakpoint       Device ($breakpoint)
   align-self        : $align;
 }
 
-@mixin flex-complete ($direction: row, $justify: start, $align: center, $wrap: nowrap) {
+@mixin flex-complete ($justify: start, $align: center, $wrap: nowrap, $direction: row) {
   @include display-flex();
   @include justify-content($justify);
   @include align-items($align);
