--- a/components/_index.scss
+++ b/components/_index.scss
@@ -4,12 +4,12 @@
 @import './common/_style';
 // @import './Compare/style';
 // @import './Filter/_style';
-// @import './Footer/_style';
+@import './Footer/_style';
 @import './Home/_style';
 // @import './Landing/_style';
 // @import './Legal/_style';
 // @import './MyAccount/_style';
 // @import './Navbar/_style';
 // @import './product/_style';
-// @import './search/_style';
-// @import './shoppingCart/_style';
+@import './search/_style';
+@import './shoppingCart/_style';
