added product component

--- a/components/_index.scss
+++ b/components/_index.scss
@@ -10,6 +10,6 @@
 // @import './Legal/_style';
 // @import './MyAccount/_style';
 // @import './Navbar/_style';
-// @import './product/_style';
+@import './product/_style';
 @import './search/_style';
 @import './shoppingCart/_style';
