updated home styling

--- a/components/_index.scss
+++ b/components/_index.scss
@@ -3,7 +3,7 @@
 // @import './Checkout/_style';
 @import './common/_style';
 // @import './Compare/style';
-// @import './Filter/_style';
+@import './Filter/_style';
 @import './Footer/_style';
 @import './Home/_style';
 // @import './Landing/_style';
