--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -12,6 +12,7 @@
 @import '../components/_index.scss';
 @import 'components/login';
 @import 'components/forgotPassword';
+@import 'components/Page404';
 
 * {
 	box-sizing : border-box;
