_style.scss files relocation

--- a/components/Account/_style.scss
+++ b/components/Account/_style.scss
@@ -1,4 +1,9 @@
+// ACCOUNT STYLES
+
+@import './ForgotPassword/_style';
 @import './Login/_style';
+@import './ResetPassword/_style';
+
 
 .app_account {
   padding: 0 0 190px;
