--- a/components/_index.scss
+++ b/components/_index.scss
@@ -1,4 +1,6 @@
-// @import './Account/_style';
+// COMPONENTS STYLES
+
+@import './Account/_style';
 // @import './Category/_style';
 // @import './Checkout/_style';
 @import './common/_style';
@@ -13,3 +15,4 @@
 @import './product/_style';
 @import './search/_style';
 @import './shoppingCart/_style';
+@import './Page404/_style';
