--- a/components/_index.scss
+++ b/components/_index.scss
@@ -9,7 +9,7 @@
 @import './Footer/_style';
 @import './Home/_style';
 // @import './Landing/_style';
-// @import './Legal/_style';
+@import './Legal/_style';
 // @import './MyAccount/_style';
 // @import './Navbar/_style';
 @import './product/_style';
