--- a/components/_index.scss
+++ b/components/_index.scss
@@ -2,6 +2,7 @@
 
 @import './Account/_style';
 @import './common/_style';
+@import './CookiesPopup/_style';
 @import './Filter/_style';
 @import './Footer/_style';
 @import './Home/_style';
