--- a/components/_index.scss
+++ b/components/_index.scss
@@ -1,8 +1,8 @@
 // @import './Account/_style';
-// @import './Category/_style';
+@import './Category/_style';
 // @import './Checkout/_style';
 @import './common/_style';
-// @import './Compare/style';
+@import './Compare/style';
 @import './Filter/_style';
 @import './Footer/_style';
 @import './Home/_style';
