NavBar included / Route.pushRoute replaced by Route.push

--- a/components/_index.scss
+++ b/components/_index.scss
@@ -16,4 +16,4 @@
 // @import './Compare/style';
 // @import './Landing/_style';
 // @import './MyAccount/_style';
-// @import './Navbar/_style';
+@import './Navbar/_style';
