replacing client code to nextjs code

--- a/components/_index.scss
+++ b/components/_index.scss
@@ -15,5 +15,5 @@
 // @import './Checkout/_style';
 @import './Compare/style';
 // @import './Landing/_style';
-// @import './MyAccount/_style';
+@import './MyAccount/_style';
 // @import './Navbar/_style';
