--- a/components/_index.scss
+++ b/components/_index.scss
@@ -12,8 +12,8 @@
 @import './search/_style';
 @import './shoppingCart/_style';
 @import './Category/_style';
-// @import './Checkout/_style';
+@import './Checkout/_style';
 @import './Compare/style';
 // @import './Landing/_style';
-// @import './MyAccount/_style';
+@import './MyAccount/_style';
 @import './Navbar/_style';
