--- a/components/Footer/_style.scss
+++ b/components/Footer/_style.scss
@@ -140,19 +140,19 @@
       margin-right: 15px;
       
       &.facebook {
-        background: url('/images/icon_facebook.svg') $color05 center no-repeat;
+        background: url('/static/images/icon_facebook.svg') $color05 center no-repeat;
       }
 
       &.twitter {
-        background: url('/images/icon_twitter.svg') $color05 center no-repeat;
+        background: url('/static/images/icon_twitter.svg') $color05 center no-repeat;
       }
 
       &.instagram {
-        background: url('/images/icon_instagram.svg') $color05 center no-repeat;
+        background: url('/static/images/icon_instagram.svg') $color05 center no-repeat;
       }
 
       &.pinterest {
-        background: url('/images/icon_pinterest.svg') $color05 center no-repeat;
+        background: url('/static/images/icon_pinterest.svg') $color05 center no-repeat;
         background-size: 60%;
       }
 
