--- a/components/Compare/_style.scss
+++ b/components/Compare/_style.scss
@@ -48,10 +48,10 @@
     height: 30px;
     border-radius: 100%;
     border: 2px solid $color03;
-    z-index: 10;
+    z-index: 1;
 
     &-checked {
-      background: $color01 url('/images/icon-round.png') no-repeat center;
+      background: $color01 url('/static/images/icon-round.png') no-repeat center;
       background-size: 60%;
     }
 
