--- a/components/Filter/FilterUI/_style.scss
+++ b/components/Filter/FilterUI/_style.scss
@@ -25,7 +25,10 @@
     width           : 100%;
     padding         : 0 35px;
     position        : absolute;
-    z-index         : 30;
+    z-index         : 1;
+    //ORIGINAL
+    //z-index         : 30;
+    //NavBar z-index = 1002 --> ???
 
     @media #{$sm} {
       @include border-radius(0);
@@ -63,7 +66,7 @@
 
     &-img {
       @include transition(background-image 400ms cubic-bezier(0.165, 0.84, 0.44, 1));
-      background-image : url('/images/icon_filter.png');
+      background-image : url('/static/images/icon_filter.png');
       background-repeat: no-repeat;
       background-size  : cover;
       height           : 20px;
@@ -76,7 +79,7 @@
       }
 
       #{$father}-btn_show_filters-img {
-        background-image: url('/images/icon_filter_hover.png');
+       background-image: url('/static/images/icon_filter_hover.png');
       }
     }
   }
