--- a/components/product/Product/BoxBuyProduct/Stepper/StepSelect/_style.scss
+++ b/components/product/Product/BoxBuyProduct/Stepper/StepSelect/_style.scss
@@ -18,6 +18,9 @@
     outline       : none;
     padding       : 5px 20px;
     width         : 325px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     
     @media #{$xs} {
       font-size: 13px;
