--- a/components/product/Product/BoxBuyProduct/Stepper/StepSelect/_style.scss
+++ b/components/product/Product/BoxBuyProduct/Stepper/StepSelect/_style.scss
@@ -26,6 +26,10 @@
       font-size: 13px;
       max-width: 300px;
     }
+
+    // .MuiInputLabel-animated{
+    //   color: 'green',
+    // }
       
   }
   
