componente <SelectInputBis actializado

--- a/components/common/_style.scss
+++ b/components/common/_style.scss
@@ -13,7 +13,7 @@
 @import './RadioInput/_style';
 @import './Rating/_index';
 @import './RatingsForm/_index';
-@import './SelectInput/_style';
+@import './SelectInputBis/_style';
 @import './SocialNav/_style';
 @import './TextArea/_style';
 @import './TextInput/_style';
