--- a/components/Checkout/_style.scss
+++ b/components/Checkout/_style.scss
@@ -27,12 +27,6 @@
     @media #{$xs} {
       padding: 20px 15px 40px;
     }
-    .lalala{
-      background-color: white;
-      font-size: 40px;
-      color: red;
-      z-index: 100;
-    }
 
     .link_login {
       background-color: initial;
@@ -123,6 +117,10 @@
   .app_checkout-right {
     max-width: 470px;
     width    : 470px;
+    height   : 100%;
+    position: fixed;
+    right: 0;
+  
 
     @media #{$sm} {
       display: none;
